Fix z-indexing for the analytics widget

--- a/common/components/AnalyticsNotice/AnalyticsNotice.scss
+++ b/common/components/AnalyticsNotice/AnalyticsNotice.scss
@@ -10,6 +10,7 @@
   background: #313131;
   border-top: 1px solid #3e546d;
   color: #fff;
+  z-index: 50;
 }
 
 .AnalyticsNotice {
